--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "chart.js": "^2.7.2",
     "node-sass": "^4.9.0",
     "sass": "^1.6.2",
     "sass-loader": "^7.0.3",
