--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,14 @@ yarn-error.log*
 *.ntvs*
 *.njsproj
 *.sln
+
+
+/coverage
+/.nyc_output
+firebase-debug.log
+npm-debug.log
+.npmrc
+
+.DS_Store
+.idea
+*.iml
