--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "chart.js": "^2.7.2",
+    "firebase": "^5.1.0",
     "node-sass": "^4.9.0",
     "sass": "^1.6.2",
     "sass-loader": "^7.0.3",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuefire": "^1.4.5"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
